avoid overflow subtask display

--- a/styles/add_task_subtask_input.css
+++ b/styles/add_task_subtask_input.css
@@ -80,6 +80,7 @@ ul {
 
 .subtask-text {
     padding-left: 8px;
+    overflow-wrap: anywhere;
 }
 
 .subtask-item {
